fixed triangle cutting off

--- a/css/flatking.blue.css
+++ b/css/flatking.blue.css
@@ -197,6 +197,13 @@ h4.media-heading {
 	padding: 136px 0 0 0;
 }
 
+#myheader {
+	overflow: hidden;
+	padding: 136px 0 0 0;
+	background-color:#55c0ee;
+}
+
+
 /* ------------------------ buttons ----------------------*/
 .btn-king {
 	border: none;
